Comment section UI improvements

--- a/src/home.html
+++ b/src/home.html
@@ -24,7 +24,7 @@
 
     <div id="homepage">
        <!-- Card -->
-      <div v-for="item in contents" :key="item.id" class=" px-6 m-6 max-w-xl-2 rounded-box">
+      <div v-for="item in contents" :key="item.id" class=" px-6 m-6 max-w-xl-2">
         <div class="flex justify-between items-center">
       
           <div class="avatar flex items-center">
