--- a/src/index.html
+++ b/src/index.html
@@ -68,14 +68,16 @@
         <form method="dialog">
           <button class="btn btn-sm btn-circle btn-ghost absolute right-2 top-2">✕</button>
         </form>
+       <div class="pt-6">
         <form id="postForm">
           <input type="hidden" name="imguid" id="imguid">
-          <textarea name="content" class="textarea textarea-bordered w-full"></textarea>
+          <textarea name="content" class="textarea textarea-bordered w-full P-6 "></textarea>
           <div>
             <input type="file" id="fileInput" name="img[]" accept="image/*" multiple class="file-input file-input-bordered w-full">
           </div>
           <button class="btn btn-primary float-end ">POST</button>
         </form>
+       </div>
       </div>
     </dialog>
     
