--- a/src/index.html
+++ b/src/index.html
@@ -24,7 +24,7 @@
             <a href="home.html" target="main-content"><i class="material-icons">home</i> Home</a>
           </li>
           <li>
-            <button onclick="x.showModal()"><i class="material-icons">create</i> Create</button>
+            <a onclick="x.showModal()"><i class="material-icons">create</i> Create</a>
           </li>
           <li>
             <a href="search.html" target="main-content"><i class="material-icons">search</i> Search</a>
@@ -33,7 +33,7 @@
             <a :href="'profile.html?uid='+uid" target="main-content"><i class="material-icons">account_circle</i> Profile</a>
           </li>
           <li>
-            <button type="submit" onclick="signoutUser()"><i class="material-icons">logout</i> Logout</button>
+            <a type="submit" onclick="signoutUser()"><i class="material-icons">logout</i> Logout</a>
           </li>
         </div>
       </ul>      
@@ -50,14 +50,51 @@
 
     <div class="divider divider-horizontal m-0 p-0"></div>
     
-    <div class="flex-auto w-64">
+    <div class="flex flex-col w-96">
 
-      <div class="p-2">
-        <label class="input input-bordered flex items-center gap-2">
-          <input type="text" class="grow" placeholder="Search" />
-          <i class="material-icons w-4 h-4 opacity-70">search</i>
-        </label>
-        <a class="btn btn-ghost text-lg">Suggestions</a>
+      <div class="p-6">
+        <!-- <label class="input input-bordered flex items-center gap-2">
+                <input type="text" class="grow" placeholder="Search" />
+                <i class="material-icons w-4 h-4 opacity-70">search</i>
+              </label> -->
+        <div class="text-lg">Suggestions</div>
+        <div class="avatar pt-3">
+          <div class="w-10 h-10 rounded-full">
+            <img src="https://avatars.githubusercontent.com/u/133362311?v=4" />
+          </div>
+          <label class="text-lg">
+            <a href="profile.html?uid=30" target="main-content">Sengo Muramasa
+              <div class="text-gray-600">
+                @muramasa
+              </div>
+            </a>
+          </label>
+        </div>
+        <div class="avatar pt-3">
+          <div class="w-10 h-10 rounded-full">
+            <img src="https://avatars.githubusercontent.com/u/133362311?v=4" />
+          </div>
+          <label class="text-lg">
+            <a href="profile.html?uid=30" target="main-content">Miyamoto Musashi
+              <div class="text-gray-600">
+                @miyamotomusashi
+              </div>
+            </a>
+          </label>
+        </div>
+        <div class="avatar pt-3">
+          <div class="w-10 h-10 rounded-full">
+            <img src="https://avatars.githubusercontent.com/u/133362311?v=4" />
+          </div>
+          <label class="text-lg">
+            <a href="profile.html?uid=30" target="main-content">Sasaki Kojiro
+              <div class="text-gray-600">
+                @sasaki
+              </div>
+            </a>
+          </label>
+        </div>
+
       </div>
 
     </div>
