--- a/src/home.html
+++ b/src/home.html
@@ -68,13 +68,13 @@
   
   
           <div v-if="item.filenames && item.filenames.length > 0">
-            <div class="carousel w-full">
+            <div class="carousel w-full rounded-box">
               <template v-for="(filename, index) in item.filenames" :key="index">
-                <div :id="'slide' + (index + 1)" class="carousel-item relative w-full">
-                  <img v-if="filename" :src="'..' + filename" class="w-full rounded-box">
-                  <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
-                    <a :href="'#slide' + ((index - 1 + item.filenames.length) % item.filenames.length + 1)" class="btn btn-circle">❮</a>
-                    <a :href="'#slide' + ((index + 1) % item.filenames.length + 1)" class="btn btn-circle">❯</a>
+                <div :id="'slide'+ item.post_id + (index + 1)" class="carousel-item relative w-full">
+                  <img v-if="filename" :src="'..' + filename" class="w-full">
+                  <div v-if="item.filenames.length > 1" class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
+                    <a :href="'#slide'+ item.post_id + ((index - 1 + item.filenames.length) % item.filenames.length + 1)" class="btn btn-circle">❮</a>
+                    <a :href="'#slide'+ item.post_id + ((index + 1) % item.filenames.length + 1)" class="btn btn-circle">❯</a>
                   </div>
                 </div>
               </template>
