fix: profile page

--- a/src/home.html
+++ b/src/home.html
@@ -34,7 +34,7 @@
               </div>
               <div class="ml-3 text-lg">
                 <h1 class="card-details">
-                  <a :href="'profile.html?uid=' + item.user_id" target="main-content">{{ item.fullname }}</a>
+                  <a :href="'profile.html?uid=' + item.user_id">{{ item.fullname }}</a>
                 </h1>
                 <span class="text-gray-600 break-normal">@{{ item.username }}</span>
               </div>
