--- a/src/index.html
+++ b/src/index.html
@@ -18,7 +18,10 @@
 <body>
   <div class="flex h-screen w-full" id="main">
     <div class="flex-auto w-96">
-      <ul class="menu text-2xl place-content-center pt-5">
+      <div class="text-3xl font-bold text-center pt-5">
+        <span class="text-secondary">Anti</span><span class="text-accent">social</span>
+      </div>
+      <ul class="menu text-2xl place-content-center pt-1">
         <li>
           <a href="home.html" target="main-content"><i class="material-icons">home</i> Home</a>
         </li>
