--- a/src/profile.html
+++ b/src/profile.html
@@ -127,8 +127,8 @@
               <div class="w-full focus:outline-none" contenteditable="true"
                 @input="item.editedContent = $event.target.innerText">{{ item.editedContent }}</div>
               <div class="float-end">
-                <button @click="saveEditedContent(item)" class="p-1 text-success hover:underline">Save</button>
-                <button @click="cancelEditContent(item)" class="p-1 text-error hover:underline">Cancel</button>
+                <button @click="saveEditedContent(item)" class="p-1 text-info hover:underline">Save</button>
+                <button @click="cancelEditContent(item)" class="p-1 text-info hover:underline">Cancel</button>
               </div>
             </div>
           </div>
@@ -153,8 +153,9 @@
           <span class="text-gray-600">{{ item.created_at}}</span>
 
           <div class="flex justify-between items-center p-3">
-            <a :href="'comment.html?post=' + item.post_id + '&u=' + item.user_id" class="flex items-center"><i
-                class="material-icons mr-2">forum</i> {{ item.comment_count }}</a>
+            <a :href="'comment.html?post=' + item.post_id + '&u=' + item.user_id"
+                class="flex items-center hover:text-primary">
+                <i class="material-icons mr-2">forum</i> {{ item.comment_count }}</a>
           </div>
         </div>
         <div class="divider m-0 p-0"></div>
