--- a/src/index.html
+++ b/src/index.html
@@ -121,7 +121,7 @@
           </div>
           <div class="absolute inset-0 rounded-full opacity-0 bg-black bg-opacity-50 transition-opacity duration-300 group-hover:opacity-100">
             <i class="material-icons flex items-center justify-center h-24">edit</i>
-            <input type="file" accept="image/*" class="absolute top-0 left-0 w-full h-full opacity-0 cursor-pointer">
+            <input type="file" accept="image/*" name="profile" class="absolute top-0 left-0 w-full h-full opacity-0 cursor-pointer">
           </div>
         </div>
 
