--- a/src/home.html
+++ b/src/home.html
@@ -31,7 +31,7 @@
             <a :href="'profile.html?uid=' + item.user_id">
               <div class="avatar container">
                 <div class="w-12 h-12 rounded-full">
-                  <img src="https://avatars.githubusercontent.com/u/133362311?v=4" />
+                  <img :src="'..' + item.profile_pic" />
                 </div>
                   <label class="text-lg pl-2">{{ item.fullname }}
                     <p class="text-gray-600 break-normal">@{{ item.username }}</p>
