--- a/src/index.html
+++ b/src/index.html
@@ -73,7 +73,7 @@
           <a :href="'profile.html?uid=' + item.user_id" target="main-content">
             <div class="avatar flex items-center pt-3">
               <div class="w-10 h-10 rounded-full">
-                <img src="https://avatars.githubusercontent.com/u/133362311?v=4" />
+                <img :src="'..' + item.profile_pic" />
               </div>
               <label class="text-lg pl-2"> {{ item.fullname }}
                 <p class="text-gray-600">
