Add like and notifictions(ui)

--- a/src/index.html
+++ b/src/index.html
@@ -32,6 +32,9 @@
           <a href="search.html" target="main-content"><i class="material-icons">search</i> Search</a>
         </li>
         <li>
+          <a href="notifications.html" target="main-content"><i class="material-icons">notifications</i> Notifications</a>
+        </li>
+        <li>
           <a :href="'profile.html?uid='+uid" target="main-content"><i class="material-icons">account_circle</i>
             Profile</a>
         </li>
