--- a/src/home.html
+++ b/src/home.html
@@ -86,9 +86,15 @@
           <span class="text-gray-600">{{ item.created_at}}</span>
 
           <div class="flex justify-between items-center p-3">
-            <a :href="'comment.html?post=' + item.post_id + '&u=' + item.user_id"
-                class="flex items-center hover:text-primary">
-                <i class="material-icons mr-2">forum</i> {{ item.comment_count }}</a>
+            <div class="flex items-center">
+              <a :href="'comment.html?post=' + item.post_id + '&u=' + item.user_id" class="flex items-center hover:text-error">
+                <i class="material-icons mr-2">favorite</i> {{ item.comment_count }}
+              </a>
+              <a :href="'comment.html?post=' + item.post_id + '&u=' + item.user_id"
+                class="flex items-center hover:text-primary ml-4">
+                <i class="material-icons mr-2">forum</i> {{ item.comment_count }}
+              </a>
+            </div>
           </div>
         </div>
         <div class="divider m-0 p-0"></div>
