--- a/src/index.html
+++ b/src/index.html
@@ -32,7 +32,12 @@
           <a href="search.html" target="main-content"><i class="material-icons">search</i> Search</a>
         </li>
         <li>
-          <a href="notifications.html" target="main-content"><i class="material-icons">notifications</i> Notifications</a>
+          <a href="notifications.html" target="main-content">
+            <div class="indicator">
+              <div class="indicator-item badge badge-secondary">1</div>
+              <i class="material-icons">notifications</i>
+            </div>
+            Notifications</a>
         </li>
         <li>
           <a :href="'profile.html?uid='+uid" target="main-content"><i class="material-icons">account_circle</i>
