--- a/src/notifications.html
+++ b/src/notifications.html
@@ -3,9 +3,32 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Notifications</title>
+    <link rel="stylesheet" href="assets/css/index.css">
+    <link href="https://cdn.jsdelivr.net/npm/daisyui@4.10.2/dist/full.min.css" rel="stylesheet" type="text/css" />
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <script src="lib/session.js" async></script>
+    <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
+    <script src="https://cdn.tailwindcss.com"></script>
 </head>
-<body>
+<body class="flex flex-col h-screen w-screen">
+    <div class="navbar">
+        <a class="text-2xl">Notifications</a>
+    </div>
+    <div class="divider m-0 p-0"></div>
     
+    <a :href="'profile.html?uid=' + item.user_id">
+        <div class="avatar flex items-center pt-3">
+          <div class="w-10 h-10 rounded-full">
+            <img :src="'..' + item.profile_pic" />
+          </div>
+          <label class="text-lg pl-2"> {{ item.fullname }} like your post.
+            <p class="text-gray-600">
+              1:09
+            </p>
+          </label>
+        </div>
+      </a>
+
 </body>
 </html>
