--- a/src/notifications.html
+++ b/src/notifications.html
@@ -10,6 +10,7 @@
     <script src="lib/session.js" async></script>
     <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
     <script src="https://cdn.tailwindcss.com"></script>
+    <script src="lib/notif.js" defer></script>
 </head>
 <body class="flex flex-col h-screen w-screen">
     <div class="navbar">
@@ -17,18 +18,22 @@
     </div>
     <div class="divider m-0 p-0"></div>
     
-    <a :href="'profile.html?uid=' + item.user_id">
-        <div class="avatar flex items-center pt-3">
-          <div class="w-10 h-10 rounded-full">
-            <img :src="'..' + item.profile_pic" />
-          </div>
-          <label class="text-lg pl-2"> {{ item.fullname }} like your post.
-            <p class="text-gray-600">
-              1:09
-            </p>
-          </label>
+    <div id="notifa">
+        <div v-for="item in not" :key="item.id">
+            <a :href="'profile.html?uid=' + item.user_id">
+                <div class="avatar flex items-center pt-3">
+                  <div class="w-10 h-10 rounded-full">
+                    <img :src="'..' + item.profile_pic" />
+                  </div>
+                  <label class="text-lg pl-2"> {{ item.fullname }} like your post.
+                    <p class="text-gray-600">
+                      {{ item.date_like }}
+                    </p>
+                  </label>
+                </div>
+              </a>
         </div>
-      </a>
+    </div>
 
 </body>
 </html>
