--- a/src/notifications.html
+++ b/src/notifications.html
@@ -18,7 +18,7 @@
     </div>
     <div class="divider m-0 p-0"></div>
     
-    <div id="notifa">
+    <div id="notifa" class="overflow-auto h-dvh scrollbar-hide">
         <div v-for="item in not" :key="item.id">
             <a :href="'profile.html?uid=' + item.user_id">
                 <div class="avatar flex items-center pt-3">
